# Aurora-Runtime

./: CMakeLists.txt  build.sh
.github/workflows/: workflow.yml
crossfiles/: meson-aarch64-crossfile  meson-x86_64-crossfile
